--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@ img{ max-width: 100%;
     width:100%;
     /* height: 80px; */
     background-color: #aa0601;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .h_container{
@@ -202,6 +204,8 @@ select{
     width:100%;
     height: 353px;
     background-color: #aa0601;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .f_container{
